src/html/organisms/past-present-future.scss
.organisms__past-present-future {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  padding: 2px 2px 24px 2px;

  @media (min-width: 600px) {
    flex-direction: row;
    padding: 24px;
    align-items: center;
  }

  section {
    margin: 24px auto 0 24px;
    display: flex;
    flex-direction: column;

    @media (min-width: 600px) {
      margin: 0 auto;
    }

    h3 {
      background-color: var(--color-accent);
      margin-left: -4px;
      padding-left: 4px;
      margin-top: -4px;
      padding-top: 4px;
    }
  }
}

